# meta

./: .gitignore  CMakeLists.txt  README.md
examples/: source_location.cpp  type_name.cpp  version.cpp
include/meta/: meta.hpp  source_location.hpp  type_name.hpp  version.hpp
source/: source_location.cpp  type_name.cpp  util.hpp  version.cpp
test/: source_location.cpp  type_name.cpp  version.cpp
test/catch/: helpers.hpp  matchers.hpp
